# bureau-labor-statistics

./: .gitignore  README.md  catalog.json  dev.py  main.py  pyproject.toml  series_catalog.txt
.github/workflows/: run.yml
.state/local/: popular_series.json  surveys.json
assets/: __init__.py
assets/popular_series/: popular_series.py  popular_series_fixed.py
assets/series_data/: series_data.py
assets/surveys/: surveys.py
data/bls/debug/: logs.db
data/bureau-labor-statistics/popular_series/: local-86.parquet  test-fix-2.parquet
data/bureau-labor-statistics/snapshots/: local-83.json  local-84.json  local-85.json  local-86.json  local-90.json
data/bureau-labor-statistics/surveys/: local-86.parquet
data/catalog/: catalog.db
data/subsets/bls_business_dynamics/: part-00000-6a0d9869-b002-4090-b504-82e4e761d303-c000.snappy.parquet  part-00000-c25e673b-c2f0-46a9-b218-b2ba1d2fb3a8-c000.snappy.parquet
data/subsets/bls_consumer_expenditure/: part-00000-9c33b15b-7a8f-4383-8870-c237bd6a8011-c000.snappy.parquet  part-00000-c6e22ae8-323c-48ad-bfdb-2ad7ea109a89-c000.snappy.parquet
discovery/: download_series_list.py
src/: bls_client.py  main.py
src/connector_utils/: __init__.py  bls_client.py
src/ingest/: __init__.py  popular_series.py  series_catalog.py  series_data.py  surveys.py
src/nodes/: popular_series.py  series_catalog.py  series_data.py  series_datasets.py  surveys.py
src/subsets_utils/: __init__.py  config.py  delta.py  io.py  orchestrator.py  publish.py  runner.py  testing.py
src/transforms/series_data/: main.py  (+1 more)
src/utils/: bls_client.py
(+53 files in other folders)
