[project]
name = "bureau-labor-statistics"
version = "1.0.0"
description = "Bureau of Labor Statistics data connector"
requires-python = ">=3.11"
dependencies = [ "boto3", "duckdb", "httpx", "pyarrow", "pyiceberg", "ratelimit", "requests>=2.31.0", "tenacity",]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [ "assets", "utils",]
